# 7SegmentJoy

./: .gitignore  7SegmentJoy.c  7SegmentJoy.txt  CMakeLists.txt  README.md
include/private/: 7SegmentPins.h  digitConfig.h  tasks.h
source/: digitConfig.c  main.c  tasks.c
